Fix #18036: Dojox mobile iOS7 theme: invisible right item in a list

--- a/mobile/themes/ios7/ListItem.css
+++ b/mobile/themes/ios7/ListItem.css
@@ -78,7 +78,7 @@
   float: right;
   line-height: normal;
   margin-right: 4px;
-  color: white;
+  color: #000000;
   margin-top: 14px;
 }
 .mblListItemLabel {
