--- a/mobile/themes/ios7/variables.less
+++ b/mobile/themes/ios7/variables.less
@@ -244,7 +244,7 @@
 }
 
 .mblListItemRightText-styles () {
-	color: white;
+	color: @ios7-color;
 	margin-top: 14px;
 }
 
